rt/test/errors/015/test.volt
//T macro:expect-failure
//T check:expected
module test;

int main(string[] args,)
{
	return 0;
}
